helm/airbyte/stable/resources/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: scheduler
  template:
    metadata:
      labels:
        airbyte: scheduler
    spec:
      serviceAccountName: airbyte-admin
      automountServiceAccountToken: true
      containers:
        - name: airbyte-scheduler-container
          image: airbyte/scheduler
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: airbyte-volume-configs
              mountPath: /configs
            - name: airbyte-volume-workspace
              mountPath: /workspace
      volumes:
        - name: airbyte-volume-workspace
          persistentVolumeClaim:
            claimName: airbyte-volume-workspace
        - name: airbyte-volume-configs
          persistentVolumeClaim:
            claimName: airbyte-volume-configs
