helm/airbyte/stable/resources/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-webapp-svc
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    airbyte: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: webapp
  template:
    metadata:
      labels:
        airbyte: webapp
    spec:
      containers:
        - name: airbyte-webapp-container
          image: airbyte/webapp
          ports:
            - containerPort: 80
